# SDLTest

./: .gitignore  CMakeLists.txt  COMPILE.md  README.md  main.cpp
Compile/: compile.sh
src/: CMakeLists.txt  Game.cpp  Logger.cpp  Logger.h  main.cpp
src/Game/: Game.cpp  Game.h  Logger.cpp  Logger.h
